feature: use getFirst